# learning-system

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2026_04_25_0358-db8dabc9fef6_initial_schema.py  2026_04_27_1430-b8d38ee093bb_rename_turnrole_claude_to_assistant.py  2026_04_29_0905-ba986ad17982_add_session_transport_kind.py  2026_04_30_1451-ee483ace1607_add_turnrole_transition.py  2026_05_11_0046-9d5ca5f15ac7_add_turnrole_tool_call_and_tool_result.py  2026_05_12_1116-b4ec5a1e7a9f_add_turnrole_grading.py  2026_05_12_1121-968b44af7db0_add_learned_item_grading_verdict.py  2026_05_22_0500-79329541d3ad_add_pgvector_extension_document_and_.py  2026_05_30_0538-e458b1620327_add_llm_call_table.py  2026_05_30_1538-307d0aaa8206_add_error_log_trace_id.py
backend/app/: main.py
backend/app/api/: admin.py  agent.py  deps.py  diagnose.py  documents.py  health.py  home.py  search.py  sessions.py  topics.py
backend/app/core/: config.py  db.py  telemetry.py  trace_context.py
backend/app/eval/: __init__.py  judge.py  loader.py  report.py  run_record.py  runner.py  schemas.py  targets.py  teaching_driver.py
backend/app/models/: __init__.py  base.py  document.py  domain.py  embedding.py  enums.py  error_log.py  learned_item.py  llm_call.py  session.py  session_turn.py  teaching_preference.py  topic.py  user_knowledge_assertion.py  user_profile.py
backend/app/prompts/: diagnostic_intro.py  first_prompt.py  handover_prompt.py  intro.py  planner_intro.py  retest_grading_intro.py  retrieval_specialist_intro.py  (+1 more)
backend/cli/: __init__.py  admin.py
backend/scripts/: backfill_embeddings.py  seed_domains.py  smoke_agent_orchestrator.py  smoke_agent_planner.py  smoke_cross_transport.py  smoke_deepseek_transport.py  smoke_diagnostic.py  smoke_embedding.py  smoke_handover.py  smoke_observability.py  smoke_playwright_transport.py  smoke_retest.py  smoke_session_start.py  smoke_teaching_eval.py  smoke_tool_calls.py  spike_claude_dom.py  spike_response_dom.py
backend/tests/: conftest.py
(+143 files in other folders)
